# Graphics-Labs

./: CMakeCache.txt  CMakeLists copy.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json
include/: globals.hpp
lib/: CMakeLists.txt  Makefile  cmake_install.cmake
lib/glad/: cmake_install.cmake
lib/glfw-3.4/: cmake_install.cmake  cmake_uninstall.cmake
srcs/: constant.cpp
srcs/Dummy/: Lab 5_clipping.cpp  Lab 5_line_clipping copy.cpp  Lab 5_polygon_clipping copy 2.cpp  Lab 5_polygon_clipping copy.cpp  Lab2 copy 2.cpp  Lab2 copy 3.cpp  Lab2 copy.cpp  main copy 2.cpp  main copy 3.cpp  main copy 4.cpp  main copy 5.cpp  main copy 6.cpp  main copy 7.cpp  main copy 8.cpp  main copy 8s.cpp  main copy.cpp  transformation copy 2.cpp  transformation copy 3.cpp  transformation copy 4.cpp  transformation copy 5.cpp  transformation copy 6.cpp  transformation copy 8.cpp  transformation copy 9.cpp  transformation copy.cpp
srcs/Lab 1/: Lab 1.cpp
srcs/Lab 2/: Lab 2.cpp  Lab 2_Bresenham.cpp  Lab 2_DDA.cpp  Lab 2_Histogram.cpp
srcs/Lab 3/: Lab 3_Ellipse.cpp  Lab 3_Midpoint.cpp  Lab 3_Polar.cpp
srcs/Lab 4/: transformation copy 4.cpp  transformation.cpp
srcs/Lab 5/: Lab 5_line_clipping.cpp  Lab 5_polygon_clipping.cpp
srcs/Lab 6/: Lab 6_projection copy 2.cpp  Lab 6_projection copy.cpp  Lab 6_projection.cpp  Lab 6_transformation copy 2.cpp  Lab 6_transformation copy 3.cpp  Lab 6_transformation copy 4.cpp  Lab 6_transformation copy 5.cpp  Lab 6_transformation copy 6.cpp  Lab 6_transformation copy 7.cpp  Lab 6_transformation copy.cpp  lab6.cpp  (+1 more)
(+29 files in other folders)
